Text no longer covers up category selection

--- a/app/assets/styles/Screenjack.css
+++ b/app/assets/styles/Screenjack.css
@@ -42,16 +42,27 @@ button:disabled {opacity: 0.15;}
     background-size: contain; height:1em; margin:0.6825em 0 0 0.75em;
 }
 
-.disclaimer {
-	position: fixed;
-	top: 1.7em;
-	width: 100%;
-	text-align: center;
-	font-size: 2em;
-	font-weight: bold;
+.disclaimer--categories {
+	position: absolute; width: 100%;
+	top: 40px; text-align: center;
+	font-size: 200%; font-weight: bold;
 	z-index: 999999;
-	color: red;
+	color: red; font-family: 'open sans', arial, sans-serif; text-transform: uppercase; 
 }
+    @media screen and (max-device-width: 640px){
+        .disclaimer--categories {font-size: 100%; background-color:white;}
+    }
+
+.disclaimer--landing {
+    position: absolute;
+    top: 1.8em; width: 100%; text-align: center;
+    font-size: 200%; font-weight: bold;
+    z-index: 999999;
+    color: red; font-family: 'open sans', arial, sans-serif; text-transform: uppercase; 
+}
+    @media screen and (max-device-width: 640px){
+        .disclaimer--landing {font-size: 140%; top: 5.8em;}
+    }
 
 
 /*  ==========================================================================
